force-app/main/default/objects/Animal__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Age Beta</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>