force-app/main/default/objects/Animal__c/fields/Diet__c.field-meta.xml
<CustomField>
    <fullName>Diet__c</fullName>
    <label>Diet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carnivore</fullName>
            </value>
            <value>
                <fullName>Herbivore</fullName>
            </value>
            <value>
                <fullName>Omnivore</fullName>
            </value>
            <value>
                <fullName>Special Diet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>