force-app/main/default/objects/Animal__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <label>Species</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bear</fullName>
            </value>
            <value>
                <fullName>Elephant</fullName>
            </value>
            <value>
                <fullName>Giraffe</fullName>
            </value>
            <value>
                <fullName>Lion</fullName>
            </value>
            <value>
                <fullName>Monkey</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Penguin</fullName>
            </value>
            <value>
                <fullName>Tiger</fullName>
            </value>
            <value>
                <fullName>Zebra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>